crates/rex-forge/tests/snapshots/golden__snapshot_go_bin_with_flag_slog.snap
---
source: crates/rex-forge/tests/golden.rs
assertion_line: 44
expression: "generate(\"go-bin\", &[\"flag\", \"slog\"])"
---
=== .gitignore ===
/bin
*.test
=== go.mod ===
module myapp

go 1.22
// rex:require
=== main.go ===
package main

import (
	"fmt"
	// rex:imports
	"log/slog"
	"os"
	"flag"
)

func main() {
	// rex:init
	logger := slog.New(slog.NewJSONHandler(os.Stderr, nil))
	logger.Info("starting", "app", "myapp")
	name := flag.String("name", "world", "who to greet")
	flag.Parse()
	_ = name
	// rex:main
	fmt.Println("hello from myapp")
}
